# meeting_intelligence_system

./: .env.example  .gitignore  CI_CD_SETUP_GUIDE.md  README.md  REFACTORING_GUIDE.md  ReadmeV2.md  docker-compose.yml  pyproject.toml  task-definition-api.json  task-definition-ui.json
adapters/: dynamo_metadata_store.py  in_memory_vector_store.py  json_eval_store.py  s3_artifact_store.py  s3vectors_vector_store.py
api_service/: Dockerfile
domain/: models.py
localstack/: init-aws.sh
meet_intelli_system_iac/: BACKEND_MIGRATION.md  application.tf  ecr.tf  ecs.tf  github_oidc.tf  iam.tf  network.tf  outputs.tf  provider.tf  s3.tf  state.json  terraform.tfvars  terraform_backend.tf  variables.tf
meet_intelli_system_iac_v2/: application_v2.tf  data_sources.tf  dynamodb.tf  ecr.tf  ecs.tf  github_oidc.tf  iam.tf  key.json  network_v2.tf  outputs.tf  provider.tf  s3.tf  s3vectors.tf  terraform.tfvars  variables.tf
meeting_transcripts_sample/: testFailureMeeting.txt  tscript1.txt  tscript10_board.txt  tscript2_technical.txt  tscript3_conflict.txt  tscript4_informal.txt  tscript5_fragmented.txt  tscript6_casual.txt  tscript7_legal.txt  tscript8_brainstorm.txt  tscript9_sales.txt
ports/: artifact_store.py  eval_store.py  guardrails.py  llm_provider.py  metadata_store.py  vector_store.py
scripts/: resync_db.py
services/: evaluation_service.py  guardrail_service.py  ingestion_service.py  query_service.py
shared_utils/: config_loader.py  constants.py  di_container.py  error_handler.py  logging_config.py  logging_utils.py  validation.py
tests/: conftest.py
(+53 files in other folders)
