[tool.poetry]
name = "meeting-intelligence-system"
version = "0.1.0"
description = "AI-powered meeting transcript analysis system"
authors = ["Gen AI Engineer"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
llama-index = "^0.10.0"
llama-index-llms-bedrock = "^0.1.0"
llama-index-embeddings-bedrock = "^0.1.0"
llama-index-embeddings-openai = "^0.1.0"
llama-index-vector-stores-lancedb = "^0.1.0"
llama-index-readers-file = "^0.1.0"
lancedb = "^0.8.0"
openai = "^1.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.7"
structlog = "^24.1.0"
streamlit = "^1.31.0"
pandas = "^2.2.0"
python-magic = "^0.4.27"
pyyaml = "^6.0.1"
httpx = "^0.26.0"
slowapi = "^0.1.8"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
